fix: Update spring-boot-architecture.md to use Amazon Corretto 21